--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
 	<a href="#navigation">zurück zu menü</a>
 </section>
 
-<section id="part 6">
+<!--<section id="part 6">
 <h1>Reserve</h1>
 <a href="#navigation">zurück zu menü</a>
 
-</section>
+</section>-->
 
 <nav>
 	<ul id="navigation">
