--- a/index.html
+++ b/index.html
@@ -1,8 +1,31 @@
 <html>
 <head>
+	<!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="bunt.css"> 
 </head>
 <body>
+
+<!-- Top Navigation Menu -->
+<div id="navigation" class="topnav">
+ <a href="#part 1" class="active">Menü</a>
+  <!-- Navigation links (hidden by default) -->
+  <div id="myLinks">
+    <a href="#part 1">Plava Laguna</a>
+    <a href="#part_2">Getränke</a>
+    <a href="#part_3">Poker</a>
+    <a href="#part_4">Ort</a>
+    <a href="#part_5">Kontakt</a>
+    
+
+    
+  </div>
+  <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div> 
+
 
 
 
@@ -143,7 +166,7 @@
 </section>
 <section id="part_3">
 	<h1>Unser Club</h1>
-	
+	fotos einfügen
 	<a href="#navigation">zurück zu menü</a>
 </section>
 <section id="part_4">
@@ -158,28 +181,21 @@
 	<a href="#navigation">zurück zu menü</a>
 </section>
 
-<!--<section id="part 6">
+<section id="part 6">
 <h1>Reserve</h1>
 <a href="#navigation">zurück zu menü</a>
 
-</section>-->
+</section>
 
-<nav>
-	<ul id="navigation">
-	
-		<li><a href="#part_1">Plava Laguna</a>
-		</li>
-		<li><a href="#part_2">Getränke</a>
-		</li>
-		<li><a href="#part_3">Poker</a>
-		</li>
-		<li><a href="#part_4">Ort</a>
-		</li>
-		<li><a href="#part_5">Kontakt</a>
-		</li>
-		<!--<li><a href="#part_6">?</a
-		</li>-->
-	</ul>
-</nav>	
+<script>
+/* Toggle between showing and hiding the navigation menu links when the user clicks on the hamburger menu / bar icon */
+function myFunction() {
+  var x = document.getElementById("myLinks");
+  if (x.style.display === "block") {
+    x.style.display = "none";
+  } else {
+    x.style.display = "block";
+  }
+} </script>
 </body>
 </html>
