--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="myLinks">
     <a href="#part 1">Plava Laguna</a>
     <a href="#part_2">Getränke</a>
-    <a href="#part_3">Poker</a>
+    <a href="#part_3">Lucky Player</a>
     <a href="#part_4">Ort</a>
     <a href="#part_5">Kontakt</a>
     
@@ -165,8 +165,9 @@
 	<a href="#navigation">zurück zu menü</a>
 </section>
 <section id="part_3">
-	<h1>Unser Club</h1>
-	fotos einfügen
+	<h1>Unser Lucky Player Club</h1>
+	Lass dich überraschen <a href="ace.jpg">&spades;</a> <a href="drink.jpg">&clubs;</a> <a href="joker.jpg">&hearts;</a> 
+	<a href="lady.jpg">&diams;</a> <br>
 	<a href="#navigation">zurück zu menü</a>
 </section>
 <section id="part_4">
