--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
 </section>
 <section id="part_3">
 	<h1>Unser Lucky Player Club</h1>
-	Lass dich überraschen <a href="ace.jpg">&spades;</a> <a href="drink.jpg">&clubs;</a> <a href="joker.jpg">&hearts;</a> 
-	<a href="lady.jpg">&diams;</a> <br>
+	<span style="font-size:200%;">Lass dich überraschen <a href="ace.jpg">&spades;</a> <a href="drink.jpg">&clubs;</a> <a href="joker.jpg">&hearts;</a> 
+		<a href="lady.jpg">&diams;</a></span> <br>
 	<a href="#navigation">zurück zu menü</a>
 </section>
 <section id="part_4">
