--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
 </section>
 
 <section id="part 6">
-<h1>Reserve</h1>
+<h1>Sonstiges</h1>
+<a href="bildquellen.txt">Bildquellen</a> <br>
 <a href="#navigation">zurück zu menü</a>
 
 </section>
