--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
 <section id="part_3">
 	<h1>Unser Lucky Player Club</h1>
 	<span style="font-size:200%;">Lass dich überraschen 
-		<a href="ace.jpg">&spades;</a> <a href="drink.jpg">&clubs;</a> <a href="automat.jpg">&hearts;</a> 
-		<a href="lady.jpg">&diams;</a></span> <br>
+		<a class="link" href="ace.jpg">&spades;</a> <a class="link" href="drink.jpg">&clubs;</a> <a class="link" href="automat.jpg">&hearts;</a> 
+		<a class="link" href="lady.jpg">&diams;</a></span> <br>
 	<a href="#navigation">zurück zu menü</a>
 </section>
 <section id="part_4">
