--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@ body, html {
 <!-- Footer -->
 <footer class="w3-center w3-light-grey w3-padding-48 w3-large">
   <p>Design 2021 by <a href="https://github.com/Democorp" title="Demo.corp" target="_blank" class="w3-hover-text-green">demo.corp</a></p>
+ <a href ="bildquellen.txt"> bild quellen </a>
 </footer>
 
 <script>
